crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__D417_sections.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
D417 Missing argument description in the docstring for `bar`: `y`
   --> sections.py:292:9
    |
290 |     x = 1
291 |
292 |     def bar(y=2):  # noqa: D207, D213, D406, D407
    |         ^^^
293 |         """Nested function test for docstrings.
    |

D417 Missing argument description in the docstring for `test_missing_google_args`: `y`
   --> sections.py:309:5
    |
307 |         "(argument(s) y are missing descriptions in "
308 |         "'test_missing_google_args' docstring)")
309 | def test_missing_google_args(x=1, y=2, _private=3):  # noqa: D406, D407
    |     ^^^^^^^^^^^^^^^^^^^^^^^^
310 |     """Toggle the gizmo.
    |

D417 Missing argument descriptions in the docstring for `test_missing_args`: `test`, `y`, `z`
   --> sections.py:333:9
    |
331 |             "(argument(s) test, y, z are missing descriptions in "
332 |             "'test_missing_args' docstring)", arg_count=5)
333 |     def test_missing_args(self, test, x, y, z=3, _private_arg=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^
334 |         """Test a valid args section.
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_class_method`: `test`, `y`, `z`
   --> sections.py:345:9
    |
343 |             "(argument(s) test, y, z are missing descriptions in "
344 |             "'test_missing_args_class_method' docstring)", arg_count=5)
345 |     def test_missing_args_class_method(cls, test, x, y, _, z=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
346 |         """Test a valid args section.
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_static_method`: `a`, `y`, `z`
   --> sections.py:358:9
    |
356 |             "(argument(s) a, y, z are missing descriptions in "
357 |             "'test_missing_args_static_method' docstring)", arg_count=4)
358 |     def test_missing_args_static_method(a, x, y, _test, z=3):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
359 |         """Test a valid args section.
    |

D417 Missing argument descriptions in the docstring for `test_missing_docstring`: `a`, `b`
   --> sections.py:370:9
    |
368 |             "(argument(s) a, b are missing descriptions in "
369 |             "'test_missing_docstring' docstring)", arg_count=2)
370 |     def test_missing_docstring(a, b):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^
371 |         """Test a valid args section.
    |

D417 Missing argument description in the docstring for `test_missing_numpy_args`: `y`
   --> sections.py:398:5
    |
396 |         "(argument(s) y are missing descriptions in "
397 |         "'test_missing_numpy_args' docstring)")
398 | def test_missing_numpy_args(_private_arg=0, x=1, y=2):  # noqa: D406, D407
    |     ^^^^^^^^^^^^^^^^^^^^^^^
399 |     """Toggle the gizmo.
    |

D417 Missing argument descriptions in the docstring for `test_method`: `another_test`, `test`, `x`, `y`
   --> sections.py:413:9
    |
411 |     """Test class."""
412 |
413 |     def test_method(self, test, another_test, z, _, x=1, y=2, _private_arg=1):  # noqa: D213, D407
    |         ^^^^^^^^^^^
414 |         """Test a valid args section.
    |

D417 Missing argument descriptions in the docstring for `test_missing_args`: `t`, `test`, `x`, `y`, `z`
   --> sections.py:434:9
    |
432 |             "(argument(s) test, y, z are missing descriptions in "
433 |             "'test_missing_args' docstring)", arg_count=5)
434 |     def test_missing_args(self, test, x, y, z=3, t=1, _private=0):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^
435 |         """Test a valid args section.
    |

D417 Missing argument descriptions in the docstring for `test_missing_args_static_method`: `a`, `x`, `y`, `z`
   --> sections.py:468:9
    |
466 |             "(argument(s) a, z are missing descriptions in "
467 |             "'test_missing_args_static_method' docstring)", arg_count=3)
468 |     def test_missing_args_static_method(a, x, y, z=3, t=1):  # noqa: D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
469 |         """Test a valid args section.
    |

D417 Missing argument description in the docstring for `test_incorrect_indent`: `y`
   --> sections.py:498:9
    |
496 |             "(argument(s) y are missing descriptions in "
497 |             "'test_incorrect_indent' docstring)", arg_count=3)
498 |     def test_incorrect_indent(self, x=1, y=2):  # noqa: D207, D213, D407
    |         ^^^^^^^^^^^^^^^^^^^^^
499 |         """Reproducing issue #437.
    |
