crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__d417_google.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
 --> D417.py:1:5
  |
1 | def f(x, y, z):
  |     ^
2 |     """Do something.
  |

D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  --> D417.py:14:5
   |
14 | def f(x, y, z):
   |     ^
15 |     """Do something.
   |

D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  --> D417.py:27:5
   |
27 | def f(x, y, z):
   |     ^
28 |     """Do something.
   |

D417 Missing argument descriptions in the docstring for `f`: `y`, `z`
  --> D417.py:39:5
   |
39 | def f(x, y, z):
   |     ^
40 |     """Do something.
   |

D417 Missing argument description in the docstring for `f`: `y`
  --> D417.py:52:5
   |
52 | def f(x, y, z):
   |     ^
53 |     """Do something.
   |

D417 Missing argument description in the docstring for `f`: `y`
  --> D417.py:65:5
   |
65 | def f(x, y, z):
   |     ^
66 |     """Do something.
   |

D417 Missing argument description in the docstring for `f`: `y`
  --> D417.py:77:5
   |
77 | def f(x, y, z):
   |     ^
78 |     """Do something.
   |

D417 Missing argument description in the docstring for `f`: `x`
  --> D417.py:98:5
   |
98 | def f(x, *args, **kwargs):
   |     ^
99 |     """Do something.
   |

D417 Missing argument description in the docstring for `f`: `*args`
   --> D417.py:108:5
    |
108 | def f(x, *args, **kwargs):
    |     ^
109 |     """Do something.
    |

D417 Missing argument description in the docstring for `f`: `x`
   --> D417.py:131:5
    |
129 |     return x, y, z
130 |
131 | def f(x):
    |     ^
132 |     """Do something with valid description.
    |

D417 Missing argument description in the docstring for `select_data`: `auto_save`
   --> D417.py:155:5
    |
155 | def select_data(
    |     ^^^^^^^^^^^
156 |     query: str,
157 |     args: tuple,
    |

D417 Missing argument description in the docstring for `f`: `**kwargs`
   --> D417.py:172:5
    |
170 |     """
171 |
172 | def f(x, *args, **kwargs):
    |     ^
173 |     """Do something.
    |

D417 Missing argument description in the docstring for `should_fail`: `Args`
   --> D417.py:199:5
    |
198 | # undocumented argument with the same name as a section
199 | def should_fail(payload, Args):
    |     ^^^^^^^^^^^
200 |     """
201 |     Send a message.
    |
