crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-class-extraneous-arguments_DOC304_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC304 Class docstring has an argument/parameter section
  --> DOC304_numpy.py:8:5
   |
 6 |     Docstring of the class
 7 |
 8 |     Parameters
   |     ^^^^^^^^^^
 9 |     ----------
10 |     a : int
   |
help: Please put arguments/parameter section in the __init__() docstring
