crates/ruff_linter/src/rules/pydoclint/snapshots/ruff_linter__rules__pydoclint__tests__docstring-class-extraneous-raises_DOC305_numpy.py.snap
---
source: crates/ruff_linter/src/rules/pydoclint/mod.rs
---
DOC305 Class docstring has a `Raises` section
  --> DOC305_numpy.py:7:1
   |
 5 |       Docstring of the class
 6 |
 7 | /     Raises
 8 | |     ------
 9 | |         ValueError
10 | |     """
   | |____^
11 |
12 |       def __init__(self, a: int, b: int) -> None:
   |
help: Please put `Raises` section in the __init__() docstring
